test/visibility/except/operatorsExceptions/exceptSubtraction.good
exceptSubtraction.chpl:6: In function 'main':
exceptSubtraction.chpl:9: error: unresolved call '-(owned Foo, owned Foo)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: this candidate did not match: -(a: uint(64), b: int(64))
exceptSubtraction.chpl:9: note: because actual argument #1 with type 'owned Foo'
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note: is passed to formal 'a: uint(64)'
exceptSubtraction.chpl:9: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   -(a: int(64), b: uint(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   -(a: uint(64), param b: uint(64))
note: and 85 other candidates, use --print-all-candidates to see them
